######################################################################################################
#                                              metadata                                              #
######################################################################################################
[project]
name = "ot1j9dc4rdqcs45pcvpho3jgr"
version = "0.0.0"

requires-python = ">= 3.11"
dependencies = ["copier>=9.14.3,<10"]

authors = [{name = "Jevan Goh", email = "javerngoh@gmail.com"}]

######################################################################################################
#                                                pixi                                                #
######################################################################################################
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

# ==================================== defaults ====================================
[tool.pixi.dependencies]
[tool.pixi.tasks]

# ==================================== environments ====================================
# ----------------------------- dev -----------------------------
[tool.pixi.environments.dev]
features = ["docs", "dev"]
solve-group = "default"

# ==================================== features ====================================
# ----------------------------- dev -----------------------------
[tool.pixi.feature.dev.dependencies]
prek = ">=0.2.30,<0.3"
nodejs = ">=25.2.1,<25.3"
markdownlint-cli2 = ">=0.20.0,<0.21"

[tool.pixi.feature.dev.tasks]
setup = "prek install"
lint_markdown = "npx --yes markdownlint-cli2 '**/*.md'"
format_markdown = "npx --yes markdownlint-cli2 --fix '**/*.md'"
init = """
    gh label delete "bug" --yes || true;
    gh label delete "documentation" --yes || true;
    gh label delete "duplicate" --yes || true;
    gh label delete "enhancement" --yes || true;
    gh label delete "good first issue" --yes || true;
    gh label delete "help wanted" --yes || true;
    gh label delete "invalid" --yes || true;
    gh label delete "question" --yes || true;
    gh label delete "wontfix" --yes || true;
    gh label create "type: bug" --color "d73a4a" --description "Incorrect information, broken links, typos or errata." --force &&
    gh label create "type: suggestion" --color "ffa5a5" --description "Proposed improvements or new ideas." --force &&
    gh label create "scope: content" --color "0075ca" --description "The actual content." --force &&
    gh label create "scope: docs" --color "a2eeef" --description "Documentation about this repository, i.e. Meta-documentation (README, contributing, license)." --force &&
    gh label create "scope: workflow" --color "5319e7" --description "Continuous Integration (CI) related."
"""

# ----------------------------- docs -----------------------------
[tool.pixi.feature.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
pymdown-extensions = ">=10.20,<11"

[tool.pixi.feature.docs.tasks]
build_docs = "mkdocs build --config-file mkdocs.yaml"

