######################################################################################################
#                                              metadata                                              #
######################################################################################################
[project]
name = "ot1j9dc4rdqcs45pcvpho3jgr"
version = "0.0.0"

requires-python = ">= 3.11"
dependencies = ["copier>=9.14.3,<10"]

authors = [{name = "Jevan Goh", email = "javerngoh@gmail.com"}]

######################################################################################################
#                                                pixi                                                #
######################################################################################################
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

# ==================================== defaults ====================================
[tool.pixi.dependencies]
[tool.pixi.tasks]

# ==================================== environments ====================================
# ----------------------------- dev -----------------------------
[tool.pixi.environments.dev]
features = ["dev_default", "dev_build", "dev_docs", "dev_lint_and_format"]
solve-group = "default"

# ==================================== features ====================================
# ----------------------------- dev_default -----------------------------
[tool.pixi.feature.dev_default.dependencies]
prek = ">=0.2.30,<0.3"
gh = ">=2.92.0,<3"
git = ">=2.54.0,<3"

[tool.pixi.feature.dev_default.tasks]
setup = "prek install"
init = """
    gh label delete "bug" --yes || true;
    gh label delete "documentation" --yes || true;
    gh label delete "duplicate" --yes || true;
    gh label delete "enhancement" --yes || true;
    gh label delete "good first issue" --yes || true;
    gh label delete "help wanted" --yes || true;
    gh label delete "invalid" --yes || true;
    gh label delete "question" --yes || true;
    gh label delete "wontfix" --yes || true;
    gh label create "type: bug" --color "d73a4a" --description "Incorrect information, broken links, typos or errata." --force &&
    gh label create "type: suggestion" --color "ffa5a5" --description "Proposed improvements or new ideas." --force &&
    gh label create "scope: content" --color "0075ca" --description "The actual content." --force &&
    gh label create "scope: docs" --color "a2eeef" --description "Documentation about this repository, i.e. Meta-documentation (README, contributing, license)." --force &&
    gh label create "scope: workflow" --color "5319e7" --description "Continuous Integration (CI) related."
"""

# ----------------------------- dev_build -----------------------------
[tool.pixi.feature.dev_build.dependencies]
mkdocs = ">=1.6.1,<2"
mkdocs-material = ">=9.7.6,<10"
pymdown-extensions = ">=10.20,<11"
[tool.pixi.feature.dev_build.tasks]
build = "mkdocs build --config-file mkdocs.yaml"

# ----------------------------- dev_lint_and_format -----------------------------
[tool.pixi.feature.dev_lint_and_format.dependencies]
prettier = ">=3.8.3"
nodejs = ">=24,<25.3"
markdownlint-cli2 = ">=0.20.0,<0.21"

[tool.pixi.feature.dev_lint_and_format.tasks]
# lint_documents = "npx --yes markdownlint-cli2"
# format_documents = "npx --yes markdownlint-cli2 --fix"
# lint_all_documents = "npx --yes markdownlint-cli2 '**/*.md'"
# format_all_documents = "npx --yes markdownlint-cli2 --fix '**/*.md'"
lint_documents = "prettier --check --ignore-unknown"
format_documents = "prettier --write --ignore-unknown"
lint_all_documents = "prettier --check . --ignore-unknown"
format_all_documents = "prettier --write . --ignore-unknown"

# ----------------------------- dev_docs -----------------------------
[tool.pixi.feature.dev_docs.dependencies]
mkdocs = ">=1.6.1,<2"
mkdocs-material = ">=9.7.6,<10"
pymdown-extensions = ">=10.20,<11"
mkdocs-monorepo-plugin = ">=1.1.2,<2"

[tool.pixi.feature.dev_docs.tasks]
build_docs = "mkdocs build --config-file mkdocs.yaml"

[dependency-groups]
dev_docs = ["mike>=2.2.0,<3"]

