[project]
authors = [{name = "Jevan Goh", email = "javerngoh@gmail.com"}]
dependencies = []
name = "test"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
test = { path = ".", editable = true }

[tool.pixi.feature.dev.tasks]
add_gh = "pixi add --feature dev gh"
add_git = "pixi add --feature dev git"

create_gh_repo = {cmd = "gh repo create $PIXI_PROJECT_NAME --source=. --public --license gpl-3.0 --gitignore Python", depends-on = ["add_gh"]}
pixi_init = { cmd = "pixi init --force"}

git_init = { cmd = "git init", depends-on = ["add_git"]}
git_pull_main = { cmd = "git pull origin main", depends-on = ["add_git"]}
git_push_origin_main = {cmd = "git push origin main"}
git_add_and_initial_commit = { cmd = "git add . && git commit -m 'Initial commit'", depends-on = ["add_git"]}

setup = {depends-on=["git_init", "create_gh_repo", "git_pull_main", "pixi_init", "git_add_and_initial_commit", "git_push_origin_main"]}

[tool.pixi.feature.dev.dependencies]
git = ">=2.52.0,<3"
gh = ">=2.85.0,<3"


[tool.pixi.environments.dev]
features = ["dev"]
solve-group = "default"
